--- a/hopeful.html
+++ b/hopeful.html
@@ -412,7 +412,7 @@
     </p>
     <div class="email">
       <!--open email section-->
-      <a href="mailto:kaziathardesigns@gmail.com">Email me</a>
+      <a href="mailto:kaziathardesigns@gmail.com" class="button contact">Email me</a>
     </div>
     <!--end email section-->
     <div class="social-media">
