--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <a href="index.html">Kazi Athar</a>
       <nav>
         <ul>
-          <li><a href="index.html">Work</a></li>
+          <li><a href="index.html" class="active">Work</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -36,7 +36,7 @@
   <main>
     <!--welcome section-->
     <div class="section">
-      <div class="container">
+      <div class="container" id="hero">
         <h1><span>Hi there!</span> My name is Kazi.<span>A UI/UX Designer with frontend development skills based in Helsinki, Finland.</span></h1>
       </div><!-- ending of section that holds my hero text-->
     </div>
@@ -45,7 +45,7 @@
     <!--work section-->
     <div class="section">
       <!--start the whole work section-->
-      <div class="container">
+      <div class="container" id="projects">
         <!--section that contains the two projects-->
         <h2>My Work</h2>
         <div class="row">
@@ -102,7 +102,7 @@
       </p>
       <div class="email">
         <!--open email section-->
-        <a href="mailto:kaziathardesigns@gmail.com">Email me</a>
+        <a href="mailto:kaziathardesigns@gmail.com" class="button contact">Email me</a>
       </div>
       <!--end email section-->
       <div class="social-media">
