--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Work</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="about.html" class="active">About</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
@@ -119,7 +119,7 @@
       </p>
       <div class="email">
         <!--open email section-->
-        <a href="mailto:kaziathardesigns@gmail.com">Email me</a>
+        <a href="mailto:kaziathardesigns@gmail.com" class="button contact">Email me</a>
       </div>
       <!--end email section-->
       <div class="social-media">
