--- a/about.html
+++ b/about.html
@@ -110,6 +110,8 @@
   </main>
 
   <footer id="contact">
+    <div class="container">
+      <!--start the container for the footer-->
       <!--open section for footer-->
       <h2>Let's talk!</h2>
       <p>
@@ -143,7 +145,7 @@
       </div>
       <!--end of copyright-->
     </div>
-    <!--end section for footer-->
+    <!--end the container for footer-->
   </footer>
 </body>
 
