--- a/hopeful.html
+++ b/hopeful.html
@@ -403,40 +403,42 @@
   </main>
 
   <footer id="contact">
-    <!--open section for footer-->
-    <h2>Let's talk!</h2>
-    <p>
-      If you happen to like my work and want to get in touch, I would love to be of assistance to you!
-      Call me <a href="tel:+358449991122">+358449991122</a> or you could also reach out to me via Skype
-      <a href="skype:kaziathar">kaziathar</a>
-    </p>
-    <div class="email">
-      <!--open email section-->
-      <a href="mailto:kaziathardesigns@gmail.com" class="button contact">Email me</a>
+    <div class="container">
+      <!--start the container for the footer-->
+      <!--open section for footer-->
+      <h2>Let's talk!</h2>
+      <p>
+        If you happen to like my work and want to get in touch, I would love to be of assistance to you!
+        Call me <a href="tel:+358449991122">+358449991122</a> or you could also reach out to me via Skype
+        <a href="skype:kaziathar">kaziathar</a>
+      </p>
+      <div class="email">
+        <!--open email section-->
+        <a href="mailto:kaziathardesigns@gmail.com" class="button contact">Email me</a>
+      </div>
+      <!--end email section-->
+      <div class="social-media">
+        <!--open social media section-->
+        <ul>
+          <li><a href="https://www.linkedin.com/in/kazidesigns/" target="_blank">
+              <i class="fab fa-linkedin-in"></i>
+            </a></li>
+          <li><a href="https://www.facebook.com/wahaj.kazi.370" target="_blank">
+              <i class="fab fa-facebook-f"></i>
+            </a></li>
+        </ul>
+      </div>
+      <!--end social media section-->
+      <div class="copyright">
+        <!--open opyright section-->
+        <a href="">
+          <img src="https://via.placeholder.com/80">
+        </a>
+        <p>Copyright Kazi Athar 2020</p>
+      </div>
+      <!--end of copyright-->
     </div>
-    <!--end email section-->
-    <div class="social-media">
-      <!--open social media section-->
-      <ul>
-        <li><a href="https://www.linkedin.com/in/kazidesigns/" target="_blank">
-            <i class="fab fa-linkedin-in"></i>
-          </a></li>
-        <li><a href="https://www.facebook.com/wahaj.kazi.370" target="_blank">
-            <i class="fab fa-facebook-f"></i>
-          </a></li>
-      </ul>
-    </div>
-    <!--end social media section-->
-    <div class="copyright">
-      <!--open opyright section-->
-      <a href="">
-        <img src="https://via.placeholder.com/80">
-      </a>
-      <p>Copyright Kazi Athar 2020</p>
-    </div>
-    <!--end of copyright-->
-    </div>
-    <!--end section for footer-->
+    <!--end the container for footer-->
   </footer>
 </body>
 
