--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <header>
     <div class="container">
-      <a href="index.html">Kazi Athar</a>
+      <a href class="logo"="index.html">Kazi Athar</a>
       <nav>
         <ul>
           <li><a href="index.html" class="active">Work</a></li>
@@ -45,7 +45,7 @@
     <!--work section-->
     <div class="section">
       <!--start the whole work section-->
-      <div class="container" id="projects">
+      <div class="container" id="work">
         <!--section that contains the two projects-->
         <h2>My Work</h2>
         <div class="row">
@@ -93,6 +93,8 @@
   </main>
 
   <footer id="contact">
+    <div class="container">
+      <!--start the container for the footer-->
       <!--open section for footer-->
       <h2>Let's talk!</h2>
       <p>
@@ -126,7 +128,7 @@
       </div>
       <!--end of copyright-->
     </div>
-    <!--end section for footer-->
+    <!--end the container for footer-->
   </footer>
 </body>
 </html>
