--- a/hopeful.html
+++ b/hopeful.html
@@ -22,10 +22,10 @@
 <body>
   <header>
     <div class="container">
-      <a href="index.html">Kazi Athar</a>
+      <a href="index.html" class="logo">Kazi Athar</a>
       <nav>
         <ul>
-          <li><a href="index.html">Work</a></li>
+          <li><a href="index.html" class="active">Work</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -140,8 +140,7 @@
           </ul>
           <h3>Way Forward</h3>
           <p>
-            Based on the insights gathered from the people I interviewed, there is definitely a potential for a digital platform that would facilitate people in consulting a therapist for whatever issue they might encounter. The price seems to be
-            another issue that people take into consideration. If we can offer people simple yet affordable means of getting therapy then from the looks of it, people would gladly use the product.
+            Based on the insights gathered from the people I interviewed, there is definitely a potential for a digital platform that would facilitate people in consulting a therapist for whatever issue they might encounter. The price seems to be another issue that people take into consideration. If we can offer people simple yet affordable means of getting therapy then from the looks of it, people would gladly use the product.
           </p>
           <h2>User Personas</h2>
           <p>
