--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <header>
     <div class="container">
-      <a href class="logo"="index.html">Kazi Athar</a>
+      <a href="index.html" class="logo">Kazi Athar</a>
       <nav>
         <ul>
           <li><a href="index.html" class="active">Work</a></li>
@@ -37,7 +37,7 @@
     <!--welcome section-->
     <div class="section">
       <div class="container" id="hero">
-        <h1><span>Hi there!</span> My name is Kazi.<span>A UI/UX Designer with frontend development skills based in Helsinki, Finland.</span></h1>
+        <h1><span>Hi there!</span> My name is Kazi.<span> A UI/UX Designer with frontend development skills based in Helsinki, Finland.</span></h1>
       </div><!-- ending of section that holds my hero text-->
     </div>
     <!--ending of section that contains all the info-->
