--- a/about.html
+++ b/about.html
@@ -21,11 +21,11 @@
 <body>
   <header>
     <div class="container">
-      <a href="index.html">Kazi Athar</a>
+      <a href="index.html" class="logo">Kazi Athar</a>
       <nav>
         <ul>
-          <li><a href="index.html">Work</a></li>
-          <li><a href="about.html" class="active">About</a></li>
+          <li><a href="index.html" class="active">Work</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
