--- a/about.html
+++ b/about.html
@@ -138,9 +138,7 @@
       <!--end social media section-->
       <div class="copyright">
         <!--open opyright section-->
-        <a href="">
-          <img src="https://via.placeholder.com/80">
-        </a>
+          <a href="index.html" class="logo">Kazi Athar</a>
         <p>Copyright Kazi Athar 2020</p>
       </div>
       <!--end of copyright-->
