--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
 
   <main>
     <!--welcome section-->
-    <div class="section">
-      <div class="container" id="hero">
+    <div class="section" id="hero">
+      <div class="container">
         <h1><span>Hi there!</span> My name is Kazi.<span> A UI/UX Designer with frontend development skills based in Helsinki, Finland.</span></h1>
       </div><!-- ending of section that holds my hero text-->
     </div>
     <!--ending of section that contains all the info-->
     <!--end of the welcome section-->
     <!--work section-->
-    <div class="section">
+    <div class="section" id="work">
       <!--start the whole work section-->
-      <div class="container" id="work">
+      <div class="container">
         <!--section that contains the two projects-->
         <h2>My Work</h2>
         <div class="row">
@@ -121,9 +121,7 @@
       <!--end social media section-->
       <div class="copyright">
         <!--open opyright section-->
-        <a href="">
-          <img src="https://via.placeholder.com/80">
-        </a>
+          <a href="index.html" class="logo">Kazi Athar</a>
         <p>Copyright Kazi Athar 2020</p>
       </div>
       <!--end of copyright-->
