--- a/hopeful.html
+++ b/hopeful.html
@@ -400,7 +400,7 @@
     </div>
     <!--end main section-->
   </main>
-
+  
   <footer id="contact">
     <div class="container">
       <!--start the container for the footer-->
@@ -430,9 +430,7 @@
       <!--end social media section-->
       <div class="copyright">
         <!--open opyright section-->
-        <a href="">
-          <img src="https://via.placeholder.com/80">
-        </a>
+          <a href="index.html" class="logo">Kazi Athar</a>
         <p>Copyright Kazi Athar 2020</p>
       </div>
       <!--end of copyright-->
