--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
   </header>
 
   <main>
-    <div class="about section">
+    <div class="about-section" id="about-page">
       <!--start the about section-->
       <div class="container">
         <!-- start conatiner for the h1-->
@@ -41,7 +41,7 @@
       </div><!-- end container for h1-->
     </div>
     <!--end about section-->
-    <div class="main section">
+    <div class="main-section">
       <!--start the section-->
       <div class="container">
         <!-- start conatiner for content-->
@@ -70,7 +70,7 @@
             <h2>Skills & Tools</h2>
             <div class="row">
               <!--start row for skills and tool columns-->
-              <div class="column">
+              <div class="col-md-6">
                 <!--start skills column-->
                 <h3>Relevant Skills</h3>
                 <ul>
@@ -83,7 +83,7 @@
                 </ul>
               </div>
               <!--end column for skills-->
-              <div class="column">
+              <div class="col-md-6">
                 <!--start columng for tools i use-->
                 <h3>Tools I Use</h3>
                 <ul>
