--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <h2>My Work</h2>
         <div class="row">
           <!--open row that contains the first project-->
-          <div class="column">
+          <div class="col-md-6 col-lg-7">
             <!--open first column for image-->
             <picture>
               <source srcset="img/hopeful/banner-mobile.png" media="(max-width:767px)">
@@ -58,7 +58,7 @@
             </picture>
           </div>
           <!--end first column for image-->
-          <div class="column">
+          <div class="col-md-6 col-lg-5">
             <!--open second column for text-->
             <h3>Hopeful</h3>
             <p>Hopeful is a responsive website for people suffering from mental health issues. It enables people to connect with therapists online at a time of their convenience.</p>
@@ -69,7 +69,7 @@
         <!--end row that contains the first project-->
         <div class="row">
           <!--open row that contains the second project-->
-          <div class="column">
+          <div class="col-md-6 col-lg-7">
             <!--open first column for image-->
             <picture>
               <source srcset="img/zecore/banner-mobile.png" media="(max-width:767px)">
@@ -77,7 +77,7 @@
             </picture>
           </div>
           <!--end first column for image-->
-          <div class="column">
+          <div class="col-md-6 col-lg-5">
             <!--open second column for text-->
             <h3>Zecore</h3>
             <p>Zecore is an online store that incorporates the principles of sustainability. It displays a variety of products and informs users about the importance of sustainable living. </p>
