--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!--welcome section-->
     <div class="section" id="hero">
       <div class="container">
-        <h1><span>Hi there!</span> My name is Kazi.<span> A UI/UX Designer with frontend development skills based in Helsinki, Finland.</span></h1>
+        <h1><span>Hi there!</span><span> I'm a UI/UX Designer who knows HTML, CSS, and JavaScript.</span><span>Based in Helsinki, Finland.</span></h1>
       </div><!-- ending of section that holds my hero text-->
     </div>
     <!--ending of section that contains all the info-->
