--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <div class="section" id="hero">
       <div class="container">
         <h1><span>Hi there!</span><span> I'm a UI/UX Designer who knows HTML, CSS, and JavaScript.</span><span>Based in Helsinki, Finland.</span></h1>
+        <a href="#work" class="button-hero">See my work</a>
       </div><!-- ending of section that holds my hero text-->
     </div>
     <!--ending of section that contains all the info-->
@@ -47,10 +48,10 @@
       <!--start the whole work section-->
       <div class="container">
         <!--section that contains the two projects-->
-        <h2>My Work</h2>
         <div class="row">
           <!--open row that contains the first project-->
-          <div class="col-md-6 col-lg-7">
+          <h2>My Work</h2>
+          <div class="col-lg-5">
             <!--open first column for image-->
             <picture>
               <source srcset="img/hopeful/banner-mobile.png" media="(max-width:767px)">
@@ -58,7 +59,7 @@
             </picture>
           </div>
           <!--end first column for image-->
-          <div class="col-md-6 col-lg-5">
+          <div class="col-lg-7">
             <!--open second column for text-->
             <h3>Hopeful</h3>
             <p>Hopeful is a responsive website for people suffering from mental health issues. It enables people to connect with therapists online at a time of their convenience.</p>
@@ -69,7 +70,7 @@
         <!--end row that contains the first project-->
         <div class="row">
           <!--open row that contains the second project-->
-          <div class="col-md-6 col-lg-7">
+          <div class="col-lg-5">
             <!--open first column for image-->
             <picture>
               <source srcset="img/zecore/banner-mobile.png" media="(max-width:767px)">
@@ -77,7 +78,7 @@
             </picture>
           </div>
           <!--end first column for image-->
-          <div class="col-md-6 col-lg-5">
+          <div class="col-lg-7">
             <!--open second column for text-->
             <h3>Zecore</h3>
             <p>Zecore is an online store that incorporates the principles of sustainability. It displays a variety of products and informs users about the importance of sustainable living. </p>
@@ -89,7 +90,7 @@
       </div>
       <div class="row">
         <!--open row that contains CSS project-->
-        <div class="col-md-6 col-lg-7">
+        <div class="col-lg-5">
           <!--open first column for image-->
           <svg xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" height="505" viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
       <defs>
@@ -1026,7 +1027,7 @@
   </svg>
         </div>
         <!--end first column for image-->
-        <div class="col-md-6 col-lg-5">
+        <div class="col-lg-5">
           <!--open second column for text-->
           <h3>CSS Animation</h3>
           <p>Berlin is an awesome place. Come check it out!</p>
