--- a/about.html
+++ b/about.html
@@ -24,8 +24,8 @@
       <a href="index.html" class="logo">Kazi Athar</a>
       <nav>
         <ul>
-          <li><a href="index.html" class="active">Work</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="index.html">Work</a></li>
+          <li><a href="about.html" class="active">About</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
@@ -70,7 +70,7 @@
             <h2>Skills & Tools</h2>
             <div class="row">
               <!--start row for skills and tool columns-->
-              <div class="col-md-6">
+              <div class="col-6">
                 <!--start skills column-->
                 <h3>Relevant Skills</h3>
                 <ul>
@@ -83,7 +83,7 @@
                 </ul>
               </div>
               <!--end column for skills-->
-              <div class="col-md-6">
+              <div class="col-6">
                 <!--start columng for tools i use-->
                 <h3>Tools I Use</h3>
                 <ul>
