--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
           <div class="column">
             <!--start column for skills and tools-->
             <h2>Skills & Tools</h2>
-            <div class="row">
+            <div class="no-padding-bottom">
               <!--start row for skills and tool columns-->
               <div class="col-6">
                 <!--start skills column-->
