--- a/about.html
+++ b/about.html
@@ -18,9 +18,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body>
+<body class="about-text-style">
   <header>
-    <div class="container">
+    <div class="header-container">
       <a href="index.html" class="logo">Kazi Athar</a>
       <nav>
         <ul>
@@ -47,10 +47,10 @@
         <!-- start conatiner for content-->
         <picture>
           <!--profile pic-->
-          <source srcset="img/pic-600.jpg" media="(max-width:767px)">
-          <img src="img/pic-1200.jpg" alt="Kazi's Profile Picture">
+          <source srcset="img/pic-300.png" media="(max-width:767px)">
+          <img src="img/pic-600.png "class="img-position"" "alt="Kazi's Profile Picture">
         </picture>
-        <div class="row">
+        <div class="row-max-width">
           <!-- start row for my story and skills section-->
           <!--my story-->
           <div class="column">
@@ -68,9 +68,8 @@
           <div class="column">
             <!--start column for skills and tools-->
             <h2>Skills & Tools</h2>
-            <div class="no-padding-bottom">
-              <!--start row for skills and tool columns-->
-              <div class="col-6">
+            <div class="row no-padding-bottom">
+              <div class="col-6 relevant-skills">
                 <!--start skills column-->
                 <h3>Relevant Skills</h3>
                 <ul>
