--- a/hopeful.html
+++ b/hopeful.html
@@ -19,9 +19,9 @@
 </head>
 
 
-<body>
+<body class="hopeful-text-style">
   <header>
-    <div class="container">
+    <div class="header-container">
       <a href="index.html" class="logo">Kazi Athar</a>
       <nav>
         <ul>
@@ -39,7 +39,7 @@
       <div class="container">
         <!--start main container-->
 
-        <div class="hero-image">
+        <div class="intro">
           <!--start hero image section-->
           <h1>Hopeful</h1>
           <picture>
@@ -57,7 +57,7 @@
         </div>
         <!--end hero image section-->
 
-        <div class="overiew">
+        <div class="grey">
           <!--start the overview section-->
           <h2>Overview</h2>
           <p>
@@ -71,7 +71,7 @@
         </div>
         <!--end the overview section-->
 
-        <div class="defining-the-problem">
+        <div class="white">
           <!--start defining the problem section-->
           <h2>1. Defining the Problem</h2>
           <p>
@@ -116,7 +116,7 @@
         </div>
         <!--end defining the problem section-->
 
-        <div class="understanding-the-user">
+        <div class="grey">
           <!--start understanding the user section-->
           <h2>2. Understanding the User</h2>
           <p>
@@ -148,7 +148,7 @@
           </p>
           <div class="row">
             <!--start row for user personas-->
-            <div class="column">
+            <div class="white">
               <!--start column for 1st persona-->
               <picture>
                 <source srcset="img/hopeful/carla-persona-600.png" media="(max-width:767px)">
@@ -156,7 +156,7 @@
               </picture>
             </div>
             <!--end column for 1st persona-->
-            <div class="column">
+            <div class="grey">
               <!--start column for 2nd persona-->
               <picture>
                 <source srcset="img/hopeful/jodie-persona-600.png" media="(max-width:767px)">
@@ -172,7 +172,7 @@
           </p>
           <div class="row">
             <!--start row for user journeys-->
-            <div class="column">
+            <div class="white">
               <!--start column for 1st journey-->
               <picture>
                 <source srcset="img/hopeful/user-journey-carla-600.png" media="(max-width:767px)">
@@ -180,7 +180,7 @@
               </picture>
             </div>
             <!--end column for 1st journey-->
-            <div class="column">
+            <div class="grey">
               <!--start column for 2nd journey-->
               <picture>
                 <source srcset="img/hopeful/user-journey-jodie-600.png" media="(max-width:767px)">
@@ -200,7 +200,7 @@
           </ul>
           <div class="row">
             <!--start row for user stories and flows-->
-            <div class="column">
+            <div class="white">
               <!--start column for 1st story and flow-->
               <picture>
                 <source srcset="img/hopeful/user-flow-carla-600.png" media="(max-width:767px)">
@@ -208,7 +208,7 @@
               </picture>
             </div>
             <!--end column for 1st story and flow-->
-            <div class="column">
+            <div class="grey">
               <!--start column for 2nd story and flow-->
               <picture>
                 <source srcset="img/hopeful/user-flow-jodie-600.png" media="(max-width:767px)">
@@ -221,7 +221,7 @@
         </div>
         <!--end understanding the user-->
 
-        <div class="foundational-design">
+        <div class="white">
           <!--start foundational design section-->
           <h2>3. Foundational Design</h2>
           <p>
@@ -266,7 +266,7 @@
         </div>
         <!--end foundational design section-->
 
-        <div class="usability-testing">
+        <div class="grey">
           <!--start usability testing-->
           <h2>4.Usability Testing</h2>
           <p>
@@ -297,7 +297,7 @@
         </div>
         <!--end usability testing-->
 
-        <div class="refining-the-design">
+        <div class="white">
           <!--start refining the design section-->
           <h2>Refining the Design</h2>
           <p>
@@ -323,7 +323,7 @@
         </div>
         <!--end refining the design section-->
 
-        <div class="end-to-end-design">
+        <div class="white">
           <!--start end to end design section-->
           <h2>End-to-End Design</h2>
           <picture>
@@ -400,7 +400,7 @@
     </div>
     <!--end main section-->
   </main>
-  
+
   <footer id="contact">
     <div class="container">
       <!--start the container for the footer-->
