--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
   <header>
-    <div class="container">
+    <div class="header-container">
       <a href="index.html" class="logo">Kazi Athar</a>
       <nav>
         <ul>
