--- a/index.html
+++ b/index.html
@@ -74,29 +74,6 @@
             </div>
           </div>
           <div class="col-6">
-            <!--open column for image and text-->
-            <picture>
-              <source srcset="img/hopeful/banner-mobile.png" media="(max-width:767px)">
-              <img src="img/hopeful/banner-desktop.png" alt="Hopeful">
-            </picture>
-            <div>
-              <h3>Hopeful</h3>
-              <p>Hopeful is a responsive website for people suffering from mental health issues. It enables people to connect with therapists online at a time of their convenience.</p>
-              <a href="hopeful.html" class="button">View project</a>
-            </div>
-          </div>
-          <div class="col-6">
-            <picture>
-              <source srcset="img/zecore/banner-mobile.png" media="(max-width:767px)">
-              <img src="img/zecore/banner-desktop.png" alt="Zecore">
-            </picture>
-            <div>
-              <h3>Zecore</h3>
-              <p>Zecore is an online store that incorporates the principles of sustainability. It displays a variety of products and informs users about the importance of sustainable living. </p>
-              <a href="#" class="button">View project</a>
-            </div>
-          </div>
-          <div class="col-6">
             <!--open first column for image-->
             <svg xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
               <defs>
@@ -1085,6 +1062,7 @@
     </div>
     <!--end the container for footer-->
   </footer>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
