css-pic.centered.
h1 - invisible
pic - centered

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body class="about-text-style">
+<body class="">
   <header>
     <div class="header-container">
       <a href="index.html" class="logo">Kazi Athar</a>
@@ -44,12 +44,13 @@
     <div class="main-section">
       <!--start the section-->
       <div class="container">
-        <!-- start conatiner for content-->
+        <div class="center">
         <picture>
           <!--profile pic-->
           <source srcset="img/pic-300.png" media="(max-width:767px)">
           <img src="img/pic-600.png "class="img-position"" "alt="Kazi's Profile Picture">
         </picture>
+      </div>
         <div class="row-max-width">
           <!-- start row for my story and skills section-->
           <!--my story-->
