--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
               <a href="#" class="button">View project</a>
             </div>
           </div>
+        </div>
+        <div class="row row2">
           <div class="col-6">
-            <!--open first column for image-->
             <svg xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
               <defs>
                 <polygon id="a" points=".06 231.917 .06 .929 688.717 .929 688.717 231.917" />
