--- a/about.html
+++ b/about.html
@@ -18,17 +18,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body class="">
+<body class="about">
   <header>
     <div class="header-container">
+      <div class="navtoggle" id="myNavtoggle">
       <a href="index.html" class="logo">Kazi Athar</a>
       <nav>
         <ul>
-          <li><a href="index.html">Work</a></li>
-          <li><a href="about.html" class="active">About</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="index.html" class="active">Work</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
+          <li><a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fas fa-bars"></i></a></li>
         </ul>
       </nav>
+    </div>
     </div>
   </header>
 
@@ -70,10 +73,10 @@
             <!--start column for skills and tools-->
             <h2>Skills & Tools</h2>
             <div class="row no-padding-bottom">
-              <div class="col-6 relevant-skills">
+              <div class="col-6 bullets">
                 <!--start skills column-->
                 <h3>Relevant Skills</h3>
-                <ul>
+                <ul class="about-list">
                   <li>User research</li>
                   <li>Wireframing</li>
                   <li>Prototyping</li>
@@ -83,10 +86,10 @@
                 </ul>
               </div>
               <!--end column for skills-->
-              <div class="col-6">
+              <div class="col-6  bullets">
                 <!--start columng for tools i use-->
                 <h3>Tools I Use</h3>
-                <ul>
+                <ul class="about-list">
                   <li>Sketch</li>
                   <li>Adobe XD</li>
                   <li>Figma</li>
