--- a/index.html
+++ b/index.html
@@ -19,17 +19,20 @@
 </head>
 
 
-<body>
+<body class="home">
   <header>
     <div class="header-container">
+      <div class="navtoggle" id="myNavtoggle">
       <a href="index.html" class="logo">Kazi Athar</a>
       <nav>
         <ul>
           <li><a href="index.html" class="active">Work</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
+          <li><a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fas fa-bars"></i></a></li>
         </ul>
       </nav>
+    </div>
     </div>
   </header>
 
@@ -1063,6 +1066,7 @@
     </div>
     <!--end the container for footer-->
   </footer>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/script.js"></script>
 </body>
 
