--- a/about.html
+++ b/about.html
@@ -25,8 +25,8 @@
       <a href="index.html" class="logo">Kazi Athar</a>
       <nav>
         <ul>
-          <li><a href="index.html" class="active">Work</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="index.html">Work</a></li>
+          <li><a href="about.html" class="active">About</a></li>
           <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
           <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
         </ul>
