--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!--welcome section-->
     <div class="section" id="hero">
       <div class="container">
-        <h1>Hi there!<span> I'm a <span class="color">UX/UI </span>Designer who knows <span class="color">HTML, CSS,</span> and <span class="color">JavaScript</span>.<span>Based in Helsinki, Finland.</span></h1>
+        <h1><span>Hi there!</span> I'm a <span class="color">UX/UI </span>Designer who knows <span class="color">HTML, CSS,</span> and <span class="color">JavaScript</span>.<span>Based in Helsinki, Finland.</span></h1>
         <a href="#work" class="button-hero">See my work</a>
       </div><!-- ending of section that holds my hero text-->
     </div>
