--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
         <picture>
           <!--profile pic-->
           <source srcset="img/pic-300.png" media="(max-width:767px)">
-          <img src="img/pic-600.png "class="img-position"" "alt="Kazi's Profile Picture">
+          <img src="img/pic-600.png" class="img-position" alt="Kazi's Profile Picture">
         </picture>
       </div>
         <div class="row-max-width">
@@ -148,6 +148,8 @@
     </div>
     <!--end the container for footer-->
   </footer>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
