--- a/hopeful.html
+++ b/hopeful.html
@@ -37,7 +37,7 @@
   </header>
 
   <main>
-    <div class="intro white">
+    <div class="intro white" id="project-1">
       <div class="container">
         <!--start hero image section-->
         <h1>Hopeful</h1>
